; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_directory.c_spl_filesystem_file_read_line.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_directory.c_spl_filesystem_file_read_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@SPL_FILE_OBJECT_SKIP_EMPTY = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*, i32)* @spl_filesystem_file_read_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_filesystem_file_read_line(i32* %0, %struct.TYPE_6__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @spl_filesystem_file_read_line_ex(i32* %8, %struct.TYPE_6__* %9, i32 %10)
  store i32 %11, i32* %7, align 4
  br label %12

12:                                               ; preds = %29, %3
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @SPL_FILE_OBJECT_SKIP_EMPTY, align 4
  %17 = call i64 @SPL_HAS_FLAG(i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %12
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @SUCCESS, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = call i64 @spl_filesystem_file_is_empty_line(%struct.TYPE_6__* %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %23, %19, %12
  %28 = phi i1 [ false, %19 ], [ false, %12 ], [ %26, %23 ]
  br i1 %28, label %29, label %36

29:                                               ; preds = %27
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %31 = call i32 @spl_filesystem_file_free_line(%struct.TYPE_6__* %30)
  %32 = load i32*, i32** %4, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @spl_filesystem_file_read_line_ex(i32* %32, %struct.TYPE_6__* %33, i32 %34)
  store i32 %35, i32* %7, align 4
  br label %12

36:                                               ; preds = %27
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @spl_filesystem_file_read_line_ex(i32*, %struct.TYPE_6__*, i32) #1

declare dso_local i64 @SPL_HAS_FLAG(i32, i32) #1

declare dso_local i64 @spl_filesystem_file_is_empty_line(%struct.TYPE_6__*) #1

declare dso_local i32 @spl_filesystem_file_free_line(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
